plugins {
	id 'fabric-loom' version '0.5-SNAPSHOT'
}

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

archivesBaseName = project.archives_base_name
version = project.mod_version
group = project.maven_group

repositories {
	maven {
		name = "TerraformersMC"
		url = "https://maven.terraformersmc.com/releases"
	}
}
dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation ("tf.ssf.sfort:fscript:${project.fscript_version}"){
		transitive = false
	}
	modImplementation fabricApi.module("fabric-command-api-v1", "${project.fabric_version}")

	//ModMenu
	modImplementation fabricApi.module("fabric-resource-loader-v0", "${project.fabric_version}")
	modRuntime(fabricApi.module("fabric-screen-api-v1", "${project.fabric_version}"))
	modImplementation("com.terraformersmc:modmenu:1.16.6") {
		transitive = false
	}
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}
tasks.withType(JavaCompile) {
	options.encoding = "UTF-8"
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.archivesBaseName}"}
	}
}
